# Rust_server

./: README.md  RUST_LEARNING_GUIDE.md
zero2prod/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STATE.md  configuration.yaml  dev.sh  init.sh  tests.json
zero2prod/.claude/: project_snapshot.json  settings.local.json
zero2prod/docs/: 01_OVERVIEW.md  02_DOS_PROTECTION.md  03_DATA_THEFT_PREVENTION.md  04_PHISHING_DEFENSE.md  05_SQL_INJECTION_DEFENSE.md  06_VALIDATORS_MODULE.md  07_SECURITY_MODULE.md  08_ARCHITECTURE_AND_FLOW.md  CLAUDE_BEST_PRACTICES_IMPLEMENTATION.md  CODE_WALKTHROUGH.md  CONFIGURATION_GUIDE.md  DATABASE_INTEGRATION_EXAMPLE.md  DATA_VALIDATION_GUIDE.md  DETAILED_IMPLEMENTATION.md  DOCKER_AND_MIGRATION_GUIDE.md  DOCUMENTATION_INDEX.md  EMAIL_CONFIRMATION_SERVICE.md  EMAIL_QUICK_START.md  ERROR_HANDLING.md  ERROR_HANDLING_QUICK_GUIDE.md  HEALTH_CHECK_GUIDE_2025-10-24.md  IMPLEMENTATION_COMPLETE_2024-11-22.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ERROR.md  JWT_AUTHENTICATION_GUIDE.md  LOGGING_IMPLEMENTATION.md  LOGGING_QUICKSTART.md  LOGGING_README.md  LOGIN_SYSTEM_TUTORIAL.md  NEWSLETTER_FEATURE.md  NEWSLETTER_QUICK_START.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REQUEST_FAILURE_LOGGING.md  REQUEST_LOGGING_SUMMARY.md  SECURITY.md  SECURITY_CHECKLIST.md  SETUP_GUIDE.md  SPAWN_GUIDE.md  (+5 more)
zero2prod/migrations/: 20231105000001_create_subscriptions_table.up.sql  20231105000002_create_subscription_tokens_table.up.sql  20231127000001_create_users_table.up.sql  20231127000002_create_refresh_tokens_table.up.sql
zero2prod/public/: app.js  dashboard.html  dashboard.js  index.html  styles.css
zero2prod/src/: configuration.rs  confirmation_token.rs  data_validation.rs  email_client.rs  error.rs  lib.rs  logger.rs  main.rs  request_logging.rs  security.rs  startup.rs  telemetry.rs  validators.rs
zero2prod/tests/: auth_integration.rs  (+2 more)
(+17 files in other folders)
