[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}
sqlx = {version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"]}
config = "0.13"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1.4"
reqwest = {version = "0.11", features = ["json"]}
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
urlencoding = "2"
# On Windows
# ```
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=/ENTRY:mainCRTStartup"]

## On maxOS, `brew install michaeleisel/zid/zid`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-Id=/usr/local/bin/zid"]
[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-Id=/usr/local/bin/zid"]

# ```
